# UV-Practice-1

./: README.md  pyproject.toml
src/asia/pakistan/karachi/northnazimabad/: blockj.py
src/karachi/lahore/: myfile.py
src/project2/: __init__.py  hello.py
